syntax = "proto3";

package resources.common.content;

import "buf/validate/validate.proto";
import "codegen/sanitizer/sanitizer.proto";
import "google/protobuf/struct.proto";

option go_package = "github.com/fivenet-app/fivenet/v2025/gen/go/proto/resources/common/content;content";

enum ContentType {
  CONTENT_TYPE_UNSPECIFIED = 0;
  CONTENT_TYPE_HTML = 1;
  CONTENT_TYPE_TIPTAP_JSON = 2;
}

message Content {
  optional string version = 1 [(buf.validate.field).string.max_len = 24];
  optional JSONNode content = 2;
  optional string raw_content = 3 [
    (buf.validate.field).string = {max_bytes: 2000000},
    (codegen.sanitizer.sanitizer) = {enabled: true}
  ];
}

enum NodeType {
  NODE_TYPE_UNSPECIFIED = 0;

  NODE_TYPE_DOC = 1;

  NODE_TYPE_ELEMENT = 2;
  NODE_TYPE_TEXT = 3;
  NODE_TYPE_COMMENT = 4;
}

message JSONNode {
  NodeType type = 1 [(buf.validate.field).enum.defined_only = true];
  optional string id = 2 [(codegen.sanitizer.sanitizer) = {
    enabled: true
    method: "StripTags"
  }];
  string tag = 3 [(codegen.sanitizer.sanitizer) = {
    enabled: true
    method: "StripTags"
  }];
  map<string, string> attrs = 4 [(codegen.sanitizer.sanitizer) = {
    enabled: true
    method: "StripTags"
  }];
  optional string text = 5 [(codegen.sanitizer.sanitizer) = {
    enabled: true
    method: "StripTags"
  }];
  repeated JSONNode content = 6;
}

message TiptapJSONDocument {
  google.protobuf.Struct json = 1;

  string summary = 2 [(codegen.sanitizer.sanitizer) = {
    enabled: true
    method: "StripTags"
  }];
  uint32 word_count = 3;
  string first_heading = 4 [(codegen.sanitizer.sanitizer) = {
    enabled: true
    method: "StripTags"
  }];
}
